--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update
 #RUN conda install -c conda-forge jupyterlab
 
 RUN wget https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.7-linux-x86_64.tar.gz \
-&& tar -xvzf julia-1.6.7-linux-x86_64.tar.gz && rm julia-1.6.7-linux-x86_64.tar.gz
+#&& 
+#tar -xvzf julia-1.6.7-linux-x86_64.tar.gz && rm julia-1.6.7-linux-x86_64.tar.gz
 #RUN mv julia-1.8.1/ /opt/
 #RUN ln -s /opt/julia-1.8.1/bin/julia /usr/local/bin/julia
 #RUN julia -e 'using Pkg; Pkg.add("dependencies.jl")'
