--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,21 +18,13 @@ RUN apt-get update \
 #&& rm -rf /var/lib/apt/lists/*
 
 # Install miniconda
-#ENV CONDA_DIR /opt/conda
-#RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
-#    /bin/bash ~/miniconda.sh -b -p /opt/conda
+ENV CONDA_DIR /opt/conda
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh \
+&& /bin/bash ~/miniconda.sh -b -p /opt/conda
 
 # Put conda in path so we can use conda activate
-#ENV PATH=$CONDA_DIR/bin:$PATH
+ENV PATH=$CONDA_DIR/bin:$PATH
 
-#RUN wget --quiet https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.7-linux-x86_64.tar.gz \
-#&& tar -xvzf julia-1.6.7-linux-x86_64.tar.gz \
-#&& rm julia-1.6.7-linux-x86_64.tar.gz \
-#&& mv julia-1.6.7/ /opt/
-#RUN ln -s /opt/julia-1.6.7/bin/julia /usr/local/bin/julia
-
-#RUN conda install -c conda-forge jupyterlab
-
-
+RUN conda install -c conda-forge jupyterlab
 
 ENTRYPOINT ["julia"]
