change working diretory

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
 		"dockerfile": "../Dockerfile",
 		"context": ".."		
 	},
+	"workspaceFolder": "/app",
 	"customizations": {
 		"vscode": {
 			"extensions": [
